# work_vscode_cmake_study

./: CMakeLists.txt  Readme.md
include/: Screen.hpp  get_screen.h  midi.hpp  utils.h  utils.hpp
src/: Screen.cpp  get_screen.cpp  main.cpp  midi.cpp  utils.cpp
